--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "markdown-it": "^10.0.0"
   },
   "dependencies": {
+    "deepmerge": "^4.2.2",
     "extract-gfm": "^0.1.0",
     "fs-extra": "^8.1.0",
     "gfm-code-block-regex": "^1.0.0",
+    "node-eval": "^2.0.0",
     "replace-ext": "^1.0.0"
   }
 }
