--- a/packages/omni-core/package.json
+++ b/packages/omni-core/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "clean": "del dist",
     "dev": "babel-node dev"
   },
   "devDependencies": {
@@ -11,6 +12,7 @@
     "@babel/node": "^7.8.4",
     "@smarterlabs/babel-preset": "^1.0.8",
     "@smarterlabs/eslint-config": "^1.0.7",
+    "del-cli": "^3.0.0",
     "markdown-it": "^10.0.0"
   },
   "dependencies": {
@@ -18,6 +20,7 @@
     "extract-gfm": "^0.1.0",
     "fs-extra": "^8.1.0",
     "gfm-code-block-regex": "^1.0.0",
+    "globby": "^11.0.0",
     "node-eval": "^2.0.0",
     "replace-ext": "^1.0.0"
   }
