--- a/packages/omni-core/package.json
+++ b/packages/omni-core/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@smarterlabs/omni-core",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
+    "build": "yarn run clean && babel src --out-dir dist",
     "clean": "del dist",
     "dev": "babel-node dev"
   },
@@ -12,16 +13,13 @@
     "@babel/node": "^7.8.4",
     "@smarterlabs/babel-preset": "^1.0.8",
     "@smarterlabs/eslint-config": "^1.0.7",
-    "del-cli": "^3.0.0",
-    "markdown-it": "^10.0.0"
+    "del-cli": "^3.0.0"
   },
   "dependencies": {
+    "@babel/runtime": "^7.8.4",
     "deepmerge": "^4.2.2",
-    "extract-gfm": "^0.1.0",
     "fs-extra": "^8.1.0",
-    "gfm-code-block-regex": "^1.0.0",
     "globby": "^11.0.0",
-    "node-eval": "^2.0.0",
     "replace-ext": "^1.0.0"
   }
 }
