--- a/packages/omni-core/package.json
+++ b/packages/omni-core/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "yarn run clean && babel src --out-dir dist",
     "clean": "del dist",
-    "dev": "babel-node dev"
+    "dev": "babel src --out-dir dist --watch"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
