--- a/packages/omni-core/package.json
+++ b/packages/omni-core/package.json
@@ -19,6 +19,7 @@
     "@babel/runtime": "^7.8.4",
     "@smarterlabs/omni-plugin-javascript": "*",
     "@smarterlabs/omni-plugin-php": "*",
+    "chokidar": "^3.3.1",
     "deepmerge": "^4.2.2",
     "fs-extra": "^8.1.0",
     "globby": "^11.0.0",
