--- a/packages/sandbox/package.json
+++ b/packages/sandbox/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@smarterlabs/omni-sandbox",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "main": "index.js",
   "license": "MIT",
+  "private": true,
   "scripts": {
     "build": "yarn run clean && babel-node index",
     "clean": "del dist"
