--- a/packages/omni-core/package.json
+++ b/packages/omni-core/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "@smarterlabs/omni-core",
+  "name": "omni-core",
+  "author": "https://smarterlabs.com",
   "version": "0.0.0",
   "main": "dist/index.js",
   "license": "MIT",
@@ -17,8 +18,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.8.4",
-    "@smarterlabs/omni-plugin-javascript": "*",
-    "@smarterlabs/omni-plugin-php": "*",
+    "omni-plugin-javascript": "*",
+    "omni-plugin-php": "*",
     "chokidar": "^3.3.1",
     "deepmerge": "^4.2.2",
     "fs-extra": "^8.1.0",
