--- a/packages/omni-core/package.json
+++ b/packages/omni-core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "omni-core",
   "author": "https://smarterlabs.com",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
@@ -18,12 +18,12 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.8.4",
-    "omni-plugin-javascript": "*",
-    "omni-plugin-php": "*",
     "chokidar": "^3.3.1",
     "deepmerge": "^4.2.2",
     "fs-extra": "^8.1.0",
     "globby": "^11.0.0",
+    "omni-plugin-javascript": "^0.1.0",
+    "omni-plugin-php": "^0.1.0",
     "replace-ext": "^1.0.0"
   }
 }
