--- a/packages/sandbox/package.json
+++ b/packages/sandbox/package.json
@@ -1,7 +1,7 @@
 {
   "name": "omni-sandbox",
   "author": "https://smarterlabs.com",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "main": "index.js",
   "license": "MIT",
   "private": true,
@@ -18,9 +18,9 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.8.4",
-    "omni-core": "*",
-    "omni-plugin-interpolate": "*",
-    "omni-plugin-javascript": "*",
-    "omni-plugin-yaml": "*"
+    "omni-core": "^0.1.0",
+    "omni-plugin-interpolate": "^0.1.0",
+    "omni-plugin-javascript": "^0.1.0",
+    "omni-plugin-yaml": "^0.1.0"
   }
 }
