--- a/packages/omni-php/package.json
+++ b/packages/omni-php/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "omni-plugin-javascript",
+  "name": "@smarterlabs/omni-php",
   "author": "https://smarterlabs.com",
   "version": "0.1.0",
   "main": "dist/index.js",
@@ -22,5 +22,6 @@
     "fs-extra": "^8.1.0",
     "globby": "^11.0.0",
     "replace-ext": "^1.0.0"
-  }
+  },
+  "gitHead": "a2e27c9e09a8b53fd59798250d89435eeefc68c5"
 }
