--- a/packages/omni/package.json
+++ b/packages/omni/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "omni-plugin-yaml",
+  "name": "@smarterlabs/omni",
   "author": "https://smarterlabs.com",
   "version": "0.1.0",
   "main": "dist/index.js",
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "yarn run clean && babel src --out-dir dist",
     "clean": "del dist",
-    "dev": "babel src --watch --out-dir dist"
+    "dev": "babel src --out-dir dist --watch"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
@@ -18,6 +18,13 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.8.4",
-    "yaml": "^1.8.3"
-  }
+    "chokidar": "^3.3.1",
+    "deepmerge": "^4.2.2",
+    "fs-extra": "^8.1.0",
+    "globby": "^11.0.0",
+    "@smarterlabs/omni-javascript": "^0.1.0",
+    "@smarterlabs/omni-php": "^0.1.0",
+    "replace-ext": "^1.0.0"
+  },
+  "gitHead": "a2e27c9e09a8b53fd59798250d89435eeefc68c5"
 }
