--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "build": "lerna run build --stream",
     "dev": "lerna run dev --stream --no-sort --concurrency 999",
+    "publish": "lerna publish --yes",
     "version": "lerna version"
   },
   "husky": {
