--- a/packages/omni-javascript/package.json
+++ b/packages/omni-javascript/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "omni-core",
+  "name": "@smarterlabs/omni-javascript",
   "author": "https://smarterlabs.com",
   "version": "0.1.0",
   "main": "dist/index.js",
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "yarn run clean && babel src --out-dir dist",
     "clean": "del dist",
-    "dev": "babel src --out-dir dist --watch"
+    "dev": "babel src --watch --out-dir dist"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
@@ -18,12 +18,10 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.8.4",
-    "chokidar": "^3.3.1",
     "deepmerge": "^4.2.2",
     "fs-extra": "^8.1.0",
     "globby": "^11.0.0",
-    "omni-plugin-javascript": "^0.1.0",
-    "omni-plugin-php": "^0.1.0",
     "replace-ext": "^1.0.0"
-  }
+  },
+  "gitHead": "a2e27c9e09a8b53fd59798250d89435eeefc68c5"
 }
