--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "lerna run build --stream",
-    "dev": "lerna run dev --stream --no-sort --concurrency 999",
-    "publish": "lerna publish --yes",
-    "version": "lerna version"
+    "dev": "lerna run dev --stream --no-sort --concurrency 999"
   },
   "husky": {
     "hooks": {
