--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "license": "MIT",
   "scripts": {
     "build": "lerna run build --stream",
-    "dev": "lerna run dev --stream --no-sort --concurrency 999"
+    "dev": "lerna run dev --stream --no-sort --concurrency 999",
+    "publish": "lerna publish from-package --yes",
+    "version": "lerna version"
   },
   "husky": {
     "hooks": {
