--- a/packages/omni-interpolation/package.json
+++ b/packages/omni-interpolation/package.json
@@ -21,6 +21,7 @@
     "dev": "babel src --watch --out-dir dist"
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.4",
     "@babel/node": "^7.8.4",
     "@smarterlabs/babel-preset": "^1.0.8",
