--- a/packages/omni/package.json
+++ b/packages/omni/package.json
@@ -19,6 +19,7 @@
     "dev": "babel src --out-dir dist --watch"
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.4",
     "@babel/node": "^7.8.4",
     "@smarterlabs/babel-preset": "^1.0.8",
