--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-      - name: Deploy packages to npm
+      - name: Publish packages to npm
         uses: borales/actions-yarn@v2.0.0
         with:
-          cmd: deploy
+          cmd: publish
