--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,4 +32,4 @@ jobs:
       - name: Publish packages to npm
         uses: borales/actions-yarn@v2.0.0
         with:
-          cmd: publish
+          cmd: publish:production
