--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Register npm token
         run: |
           echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > /home/runner/work/_temp/.npmrc
+          echo "_auth=$NPM_TOKEN" >>  /home/runner/work/_temp/.npmrc
+          echo "email=<kennedyianrose@gmail.com>" >>  /home/runner/work/_temp/.npmrc
+          echo "always-auth=true" >>  /home/runner/work/_temp/.npmrc
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
