--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+
       - name: Checkout code
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2
+
+      - name: Setup Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
+          registry-url: 'https://registry.npmjs.org'
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
 
       - name: Install dependencies
         uses: borales/actions-yarn@v2.0.0
@@ -27,5 +37,3 @@ jobs:
         uses: borales/actions-yarn@v2.0.0
         with:
           cmd: publish:production
-        env:
-          NPM_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
