--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,3 +37,5 @@ jobs:
         uses: borales/actions-yarn@v2.0.0
         with:
           cmd: publish:production
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
