Test CLI in prod

--- a/packages/omni-cli/package.json
+++ b/packages/omni-cli/package.json
@@ -11,7 +11,6 @@
     "smarterlabs"
   ],
   "bin": {
-    "@smarterlabs/omni-cli": "./index.js",
-    "omni": "./index.js"
+    "omni": "./index.sh"
   }
 }
