--- a/packages/omni-plugin-watch/package.json
+++ b/packages/omni-plugin-watch/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "@smarterlabs/omni",
+  "name": "@smarterlabs/omni-plugin-watch",
   "author": "https://smarterlabs.com",
-  "version": "0.1.11",
+  "version": "0.0.0",
   "main": "dist/index.js",
   "license": "MIT",
   "keywords": [
     "omni",
+    "plugin",
+    "watch",
     "odd",
     "markdown",
     "md",
@@ -16,10 +18,7 @@
   "scripts": {
     "build": "yarn run clean && babel src --out-dir dist",
     "clean": "del dist",
-    "dev": "babel src --out-dir dist --watch"
-  },
-  "bin": {
-    "omni": "./bin/omni.sh"
+    "dev": "babel src --watch --out-dir dist"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
@@ -30,13 +29,7 @@
     "del-cli": "^3.0.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.8.4",
-    "@smarterlabs/omni-core": "*",
-    "@smarterlabs/omni-plugin-cli": "*",
-    "@smarterlabs/omni-plugin-watch": "*",
-    "deepmerge": "^4.2.2",
-    "fs-extra": "^9.0.0",
-    "globby": "^11.0.0",
-    "replace-ext": "^1.0.0"
+    "chokidar": "^3.3.1",
+    "@babel/runtime": "^7.8.4"
   }
 }
