--- a/packages/omni-plugin-interpolation/package.json
+++ b/packages/omni-plugin-interpolation/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "@smarterlabs/omni-javascript",
+  "name": "@smarterlabs/omni-plugin-interpolation",
   "author": "https://smarterlabs.com",
   "version": "0.1.10",
   "main": "dist/index.js",
   "license": "MIT",
   "keywords": [
     "omni",
-    "javascript",
-    "language",
-    "js",
     "plugin",
     "interpolation",
     "odd",
@@ -32,10 +29,6 @@
     "del-cli": "^3.0.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.8.4",
-    "deepmerge": "^4.2.2",
-    "fs-extra": "^8.1.0",
-    "globby": "^11.0.0",
-    "replace-ext": "^1.0.0"
+    "@babel/runtime": "^7.8.4"
   }
 }
