--- a/packages/omni-plugin-javascript/package.json
+++ b/packages/omni-plugin-javascript/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "@smarterlabs/omni",
+  "name": "@smarterlabs/omni-plugin-javascript",
   "author": "https://smarterlabs.com",
-  "version": "0.1.11",
+  "version": "0.1.10",
   "main": "dist/index.js",
   "license": "MIT",
   "keywords": [
     "omni",
+    "javascript",
+    "language",
+    "js",
+    "plugin",
+    "interpolation",
     "odd",
     "markdown",
     "md",
@@ -16,10 +21,7 @@
   "scripts": {
     "build": "yarn run clean && babel src --out-dir dist",
     "clean": "del dist",
-    "dev": "babel src --out-dir dist --watch"
-  },
-  "bin": {
-    "omni": "./bin/omni.sh"
+    "dev": "babel src --watch --out-dir dist"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
@@ -31,11 +33,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.8.4",
-    "@smarterlabs/omni-core": "*",
-    "@smarterlabs/omni-plugin-cli": "*",
-    "@smarterlabs/omni-plugin-watch": "*",
     "deepmerge": "^4.2.2",
-    "fs-extra": "^9.0.0",
+    "fs-extra": "^8.1.0",
     "globby": "^11.0.0",
     "replace-ext": "^1.0.0"
   }
