--- a/packages/omni-plugin-watch/package.json
+++ b/packages/omni-plugin-watch/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@smarterlabs/omni-plugin-watch",
   "author": "https://smarterlabs.com",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "main": "dist/index.js",
   "license": "MIT",
   "keywords": [
@@ -29,7 +29,7 @@
     "del-cli": "^3.0.0"
   },
   "dependencies": {
-    "chokidar": "^3.3.1",
-    "@babel/runtime": "^7.8.4"
+    "@babel/runtime": "^7.8.4",
+    "chokidar": "^3.3.1"
   }
 }
