--- a/packages/omni/package.json
+++ b/packages/omni/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@smarterlabs/omni",
   "author": "https://smarterlabs.com",
-  "version": "0.1.12",
+  "version": "0.1.13",
   "main": "dist/index.js",
   "license": "MIT",
   "keywords": [
@@ -33,8 +33,8 @@
     "@babel/runtime": "^7.8.4",
     "@smarterlabs/omni-core": "^0.0.1",
     "@smarterlabs/omni-plugin-cli": "^0.0.1",
+    "@smarterlabs/omni-plugin-directive-aliases": "^0.0.1",
     "@smarterlabs/omni-plugin-watch": "^0.0.1",
-    "@smarterlabs/omni-plugin-directive-aliases": "*",
     "deepmerge": "^4.2.2",
     "fs-extra": "^9.0.0",
     "globby": "^11.0.0",
