--- a/packages/omni/package.json
+++ b/packages/omni/package.json
@@ -35,6 +35,7 @@
     "@smarterlabs/omni-plugin-cli": "^0.0.1",
     "@smarterlabs/omni-plugin-directive-aliases": "^0.0.1",
     "@smarterlabs/omni-plugin-watch": "^0.0.1",
+    "@smarterlabs/omni-plugin-json": "*",
     "deepmerge": "^4.2.2",
     "fs-extra": "^9.0.0",
     "globby": "^11.0.0",
