--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "lerna run build --stream",
     "dev": "lerna run dev --stream --no-sort --concurrency 999",
     "publish": "lerna publish from-package --yes",
+    "test": "yarn run build && cd packages/sandbox && yarn run test",
     "version": "lerna version"
   },
   "husky": {
