--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "build": "lerna run build --stream",
     "dev": "lerna run dev --stream --no-sort --concurrency 999",
+    "lint": "eslint \"./\" --fix",
     "publish": "lerna publish from-package --yes",
     "test": "yarn run build && cd packages/sandbox && yarn run test",
     "version": "lerna version"
@@ -27,6 +28,7 @@
     "packages/*"
   ],
   "devDependencies": {
+    "@smarterlabs/eslint-config-omni": "*",
     "eslint": "^6.1.0",
     "husky": "^3.0.3",
     "lerna": "^3.20.2",
