--- a/packages/omni-plugin-cli/package.json
+++ b/packages/omni-plugin-cli/package.json
@@ -25,7 +25,7 @@
     "@babel/core": "^7.8.4",
     "@babel/node": "^7.8.4",
     "@smarterlabs/babel-preset": "^1.0.8",
-    "@smarterlabs/eslint-config": "^1.0.7",
+    "@smarterlabs/eslint-config-omni": "*",
     "del-cli": "^3.0.0"
   },
   "dependencies": {
