--- a/packages/omni/package.json
+++ b/packages/omni/package.json
@@ -26,7 +26,7 @@
     "@babel/core": "^7.8.4",
     "@babel/node": "^7.8.4",
     "@smarterlabs/babel-preset": "^1.0.8",
-    "@smarterlabs/eslint-config": "^1.0.7",
+    "@smarterlabs/eslint-config-omni": "*",
     "del-cli": "^3.0.0"
   },
   "dependencies": {
@@ -36,6 +36,7 @@
     "@smarterlabs/omni-plugin-directive-aliases": "^0.0.1",
     "@smarterlabs/omni-plugin-json": "^0.0.1",
     "@smarterlabs/omni-plugin-watch": "^0.0.2",
+    "clone-deep": "^4.0.1",
     "deepmerge": "^4.2.2",
     "fs-extra": "^9.0.0",
     "globby": "^11.0.0",
