--- a/packages/omni-plugin-javascript/package.json
+++ b/packages/omni-plugin-javascript/package.json
@@ -27,14 +27,14 @@
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.4",
     "@babel/node": "^7.8.4",
-    "@smarterlabs/babel-preset": "^1.0.8",
+    "@smarterlabs/babel-preset-omni": "*",
     "@smarterlabs/eslint-config-omni": "*",
     "del-cli": "^3.0.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.8.4",
     "deepmerge": "^4.2.2",
-    "fs-extra": "^8.1.0",
+    "fs-extra": "^9.0.0",
     "globby": "^11.0.0",
     "replace-ext": "^1.0.0"
   }
