--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -2,6 +2,7 @@
 	"name": "@smarterlabs/eslint-config-omni",
 	"description": "An ESLint config for Omni",
 	"version": "0.0.0",
+	"private": true,
 	"main": "index.js",
 	"author": "https://smarterlabs.com",
 	"license": "MIT",
